# IoGR

./: .gitignore  Illusion of Gaia Randomizer.spec  IoGR_Notes.txt.lnk  IoGR_v0.8.0_Normal_DGR_C_0.txt  IoGR_v0.8.0_Normal_DGR_C_30306496.txt  IoGR_v1.0.1_Easy_DGR_C_0.txt  IoGR_v1.1-beta3_Easy_DGR_C_0.txt  IoGR_v1.1-beta3_Extreme_DG4_C_43560.txt  IoGR_v1.1-beta_Normal_DG0_C_0.txt  IoGR_v1.1-beta_Normal_DG6_C_0.txt  IoGR_v1.2.2_Easy_RJ_C_0.txt  IoGR_v1.3.1_Normal_DGR_C_0.txt  IoGR_v1.4.1_Normal_DGR_C_0.txt  IoGR_v2.0.0_Easy_DGR_C_0.txt  IoGR_v2.0.0_Normal_DGR_C_0.txt  IoGR_v2.0.2_Normal_DGR_C_E_0.txt  IoGR_v2.2.0_Normal_DGR_C_0.txt  IoGR_v2.2.0_Normal_DGR_C_SS_0.txt  IoGR_v2.2.0_Normal_DGR_C_SU_0.txt  IoGR_v2.2.4_Normal_DGR_C_eF_0.txt  MANIFEST.in  README.md  Snes9X1.51.ep10r2.lnk  build-all-local.bat  build-cli.bat  build-gui.bat  build-randomizer.bat  build-randomizer.ps1  classes.py  gui.spec  install-randomizer.bat  iogr.py  iogr_rom.py  publish-randomizer-prod.bat  publish-randomizer-test.bat  pyproject.toml  quintet_decomp.py  quintet_text.py  requirements.txt  run-all-plando.bat  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  question.yaml  (+1 more)
data/: ChangeLog.txt  EnemyTemplates.xlsx  IoG RAM Map.txt  IoG ROM Map.txt  IoG Text Table.txt  IoGR Tutorial.txt  IoGR_Notes.txt  ItemEvents.txt  LocationLogic.xlsx  RAM_Data_for_Autotracker.txt  RoomRewards.xlsx  Switches.xlsx  WorldMapEvents.txt  compare.py  map_info.xml  mapdataset.txt  mapdataset_2.txt  mapdataset_3.txt  mapdataset_van.txt  run_local.txt  text_boxes.txt  ~$Switches.xlsx
tests/: test_generate_filename.py
tracker/: itemlist.txt  layout.config
(+92 files in other folders)
